--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -16,6 +16,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+    	maven {
+    		url 'https://qisdk.softbankrobotics.com/sdk/maven'
+    	}
     }
 }
 
