--- a/BESA/AgentePepper/AgentePepper/nbproject/project.properties
+++ b/BESA/AgentePepper/AgentePepper/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AgentePepper
+application.vendor=juans
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AgentePepper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.KernelBESA.jar=../../FrameWorkBESA/KernelBESA.jar
+file.reference.LocalBESA.jar=../../FrameWorkBESA/LocalBESA.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.KernelBESA.jar}:\
+    ${file.reference.LocalBESA.jar}:\
+    ${reference.BDIBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,11 +61,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=agentepepper.AgentePepper
+main.class=RobotAgentBDI.RobotAgentBDI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.BDIBESA=../../FrameWorkBESA/BDIBESA
+reference.BDIBESA.jar=${project.BDIBESA}/dist/BDIBESA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
