--- a/BESA/AgentePepper/AgentePepper/nbproject/project.properties
+++ b/BESA/AgentePepper/AgentePepper/nbproject/project.properties
@@ -31,12 +31,14 @@ endorsed.classpath=
 excludes=
 file.reference.KernelBESA.jar=../../FrameWorkBESA/KernelBESA.jar
 file.reference.LocalBESA.jar=../../FrameWorkBESA/LocalBESA.jar
+file.reference.RationalBESA.jar=../../FrameWorkBESA/RationalBESA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.KernelBESA.jar}:\
     ${file.reference.LocalBESA.jar}:\
-    ${reference.BDIBESA.jar}
+    ${reference.BDIBESA.jar}:\
+    ${file.reference.RationalBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
