--- a/BESA/FrameWorkBESA/BDIBESA/nbproject/project.properties
+++ b/BESA/FrameWorkBESA/BDIBESA/nbproject/project.properties
@@ -29,12 +29,15 @@ dist.jar=${dist.dir}/BDIBESA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.KernelBESA.jar=../KernelBESA.jar
+file.reference.LocalBESA.jar=../LocalBESA.jar
+file.reference.RationalBESA.jar=../RationalBESA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.RationalBESA.jar}:\
-    ${reference.KernelBESA.jar}:\
-    ${reference.LocalBESA.jar}
+    ${file.reference.KernelBESA.jar}:\
+    ${file.reference.LocalBESA.jar}:\
+    ${file.reference.RationalBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,12 +67,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.KernelBESA=../KernelBESA
-project.LocalBESA=../LocalBESA
-project.RationalBESA=../RationalBESA
-reference.KernelBESA.jar=${project.KernelBESA}/dist/KernelBESA.jar
-reference.LocalBESA.jar=${project.LocalBESA}/dist/LocalBESA.jar
-reference.RationalBESA.jar=${project.RationalBESA}/dist/RationalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
