Besa Agents Arreglada

--- a/BESA/FrameWorkBESA/BDIBESA/nbproject/project.properties
+++ b/BESA/FrameWorkBESA/BDIBESA/nbproject/project.properties
@@ -31,13 +31,12 @@ endorsed.classpath=
 excludes=
 file.reference.KernelBESA.jar=../KernelBESA.jar
 file.reference.LocalBESA.jar=../LocalBESA.jar
-file.reference.RationalBESA.jar=../RationalBESA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.KernelBESA.jar}:\
     ${file.reference.LocalBESA.jar}:\
-    ${file.reference.RationalBESA.jar}
+    ${reference.RationalBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,6 +66,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.RationalBESA=../RationalBESA
+reference.RationalBESA.jar=${project.RationalBESA}/dist/RationalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
