--- a/BESA/FrameWorkBESA/RationalBESA/nbproject/project.properties
+++ b/BESA/FrameWorkBESA/RationalBESA/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=AgentePepper
-application.vendor=juans
+application.title=RationalBESA
+application.vendor=fjroldan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,19 +25,19 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AgentePepper.jar
+dist.jar=${dist.dir}/RationalBESA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.KernelBESA.jar=../../FrameWorkBESA/KernelBESA.jar
-file.reference.LocalBESA.jar=../../FrameWorkBESA/LocalBESA.jar
+file.reference.json-20160212.jar=lib\\json-20160212.jar
+file.reference.KernelBESA.jar=../KernelBESA.jar
+file.reference.LocalBESA.jar=../LocalBESA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.json-20160212.jar}:\
     ${file.reference.KernelBESA.jar}:\
-    ${file.reference.LocalBESA.jar}:\
-    ${reference.BDIBESA.jar}:\
-    ${reference.RationalBESA.jar}
+    ${file.reference.LocalBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,15 +62,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=RobotAgentBDI.RobotAgentBDI
+main.class=rationalbesa.RationalBESA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.BDIBESA=../../FrameWorkBESA/BDIBESA
-project.RationalBESA=../../FrameWorkBESA/RationalBESA
-reference.BDIBESA.jar=${project.BDIBESA}/dist/BDIBESA.jar
-reference.RationalBESA.jar=${project.RationalBESA}/dist/RationalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
