--- a/BESA/AgentePepper/AgentePepper/nbproject/project.properties
+++ b/BESA/AgentePepper/AgentePepper/nbproject/project.properties
@@ -35,13 +35,15 @@ endorsed.classpath=
 excludes=
 file.reference.KernelBESA.jar=../../FrameWorkBESA/KernelBESA.jar
 file.reference.LocalBESA.jar=../../FrameWorkBESA/LocalBESA.jar
+file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.KernelBESA.jar}:\
     ${file.reference.LocalBESA.jar}:\
     ${reference.BDIBESA.jar}:\
-    ${reference.RationalBESA.jar}
+    ${reference.RationalBESA.jar}:\
+    ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +72,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=RobotAgentBDI.RobotAgentBDI
+main.class=Init.RunAgentePepper
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
