BESA code Update

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /BESA/AgentePepper/AgentePepper/nbproject/private/
+/BESA/FrameWorkBESA/KernelBESA/nbproject/private/
+/BESA/FrameWorkBESA/LocalBESA/nbproject/private/
