--- a/BESA/AgentePepper/AgentePepper/nbproject/project.properties
+++ b/BESA/AgentePepper/AgentePepper/nbproject/project.properties
@@ -33,15 +33,13 @@ dist.jar=${dist.dir}/AgentePepper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.KernelBESA.jar=../../FrameWorkBESA/KernelBESA.jar
-file.reference.LocalBESA.jar=../../FrameWorkBESA/LocalBESA.jar
 file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.KernelBESA.jar}:\
-    ${file.reference.LocalBESA.jar}:\
     ${reference.BDIBESA.jar}:\
+    ${reference.KernelBESA.jar}:\
+    ${reference.LocalBESA.jar}:\
     ${reference.RationalBESA.jar}:\
     ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
@@ -78,8 +76,12 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.BDIBESA=../../FrameWorkBESA/BDIBESA
+project.KernelBESA=../../FrameWorkBESA/KernelBESA
+project.LocalBESA=../../FrameWorkBESA/LocalBESA
 project.RationalBESA=../../FrameWorkBESA/RationalBESA
 reference.BDIBESA.jar=${project.BDIBESA}/dist/BDIBESA.jar
+reference.KernelBESA.jar=${project.KernelBESA}/dist/KernelBESA.jar
+reference.LocalBESA.jar=${project.LocalBESA}/dist/LocalBESA.jar
 reference.RationalBESA.jar=${project.RationalBESA}/dist/RationalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
