--- a/BESA/FrameWorkBESA/BDIBESA/nbproject/project.properties
+++ b/BESA/FrameWorkBESA/BDIBESA/nbproject/project.properties
@@ -33,14 +33,12 @@ dist.jar=${dist.dir}/BDIBESA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.KernelBESA.jar=../KernelBESA.jar
-file.reference.LocalBESA.jar=../LocalBESA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.KernelBESA.jar}:\
-    ${file.reference.LocalBESA.jar}:\
-    ${reference.RationalBESA.jar}
+    ${reference.RationalBESA.jar}:\
+    ${reference.KernelBESA.jar}:\
+    ${reference.LocalBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +72,11 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.KernelBESA=../KernelBESA
+project.LocalBESA=../LocalBESA
 project.RationalBESA=../RationalBESA
+reference.KernelBESA.jar=${project.KernelBESA}/dist/KernelBESA.jar
+reference.LocalBESA.jar=${project.LocalBESA}/dist/LocalBESA.jar
 reference.RationalBESA.jar=${project.RationalBESA}/dist/RationalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
