--- a/BESA/FrameWorkBESA/RationalBESA/nbproject/project.properties
+++ b/BESA/FrameWorkBESA/RationalBESA/nbproject/project.properties
@@ -30,14 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.json-20160212.jar=lib\\json-20160212.jar
-file.reference.KernelBESA.jar=../KernelBESA.jar
-file.reference.LocalBESA.jar=../LocalBESA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-20160212.jar}:\
-    ${file.reference.KernelBESA.jar}:\
-    ${file.reference.LocalBESA.jar}
+    ${reference.KernelBESA.jar}:\
+    ${reference.LocalBESA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,6 +65,10 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.KernelBESA=../KernelBESA
+project.LocalBESA=../LocalBESA
+reference.KernelBESA.jar=${project.KernelBESA}/dist/KernelBESA.jar
+reference.LocalBESA.jar=${project.LocalBESA}/dist/LocalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
