--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /BESA/AgentePepper/AgentePepper/nbproject/private/
 /BESA/FrameWorkBESA/KernelBESA/nbproject/private/
 /BESA/FrameWorkBESA/LocalBESA/nbproject/private/
+/BESA/AgentePepper/AgentePepper/build/
