--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /BESA/AgentePepper/moduloCuidador/nbproject/private/
 /BESA/AgentePepper/moduloCuidador/build/
 /BESA/AgentePepper/TopicsRESPwA/nbproject/private/
+/BESA/AgentePepper/TopicsRESPwA/build/
