--- a/BESA/AgentePepper/AgentePepper/nbproject/project.properties
+++ b/BESA/AgentePepper/AgentePepper/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${reference.KernelBESA.jar}:\
     ${reference.LocalBESA.jar}:\
     ${reference.RationalBESA.jar}:\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${libs.javaee-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
