Update Gradle - topicos

--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven{
+            url "https://repository.kaazing.com/maven/"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
@@ -18,7 +22,10 @@ allprojects {
         jcenter()
     	maven {
     		url 'https://qisdk.softbankrobotics.com/sdk/maven'
-    	}
+            }
+        maven {
+            url "https://repository.kaazing.com/maven/"
+        }
     }
 }
 
