--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
 	implementation 'com.aldebaran:qisdk:1.6.7'
 	implementation 'com.aldebaran:qisdk-design:1.6.7'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
-
+    compile 'com.kaazing:enterprise.android.client.all:4.1.2'
 }
