--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         maven{
             url "https://repository.kaazing.com/maven/"
         }
+
+        maven{
+            url "https://mvnrepository.com/artifact/javax.jms/jms"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
