--- a/BESA/AgentePepper/AgentePepper/nbproject/project.properties
+++ b/BESA/AgentePepper/AgentePepper/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.jar=${dist.dir}/AgentePepper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.appserv-rt.jar=../../glassfish4/glassfish/lib/appserv-rt.jar
+file.reference.javaee.jar=../../glassfish4/glassfish/lib/javaee.jar
 file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
 includes=**
 jar.compress=false
@@ -42,7 +44,9 @@ javac.classpath=\
     ${reference.LocalBESA.jar}:\
     ${reference.RationalBESA.jar}:\
     ${file.reference.ojdbc7.jar}:\
-    ${libs.javaee-api-7.0.classpath}
+    ${libs.javaee-api-7.0.classpath}:\
+    ${file.reference.appserv-rt.jar}:\
+    ${file.reference.javaee.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
