--- a/BESA/AgentePepper/ResPwAAgent/nbproject/project.properties
+++ b/BESA/AgentePepper/ResPwAAgent/nbproject/project.properties
@@ -33,10 +33,34 @@ dist.jar=${dist.dir}/ResPwAAgent.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.checker-compat-qual-2.5.5.jar=../../FrameWorkBESA/checker-compat-qual-2.5.5.jar
+file.reference.checker-qual-3.5.0.jar=../../FrameWorkBESA/checker-qual-3.5.0.jar
+file.reference.commons-codec-1.11.jar=../../FrameWorkBESA/commons-codec-1.11.jar
+file.reference.commons-logging-1.2.jar=../../FrameWorkBESA/commons-logging-1.2.jar
+file.reference.error_prone_annotations-2.3.4.jar=../../FrameWorkBESA/error_prone_annotations-2.3.4.jar
+file.reference.failureaccess-1.0.1.jar=../../FrameWorkBESA/failureaccess-1.0.1.jar
+file.reference.firebase-admin-7.0.1.jar=../../FrameWorkBESA/firebase-admin-7.0.1.jar
+file.reference.google-api-client-1.30.11.jar=../../FrameWorkBESA/google-api-client-1.30.11.jar
+file.reference.google-api-client-java6-1.30.11.jar=../../FrameWorkBESA/google-api-client-java6-1.30.11.jar
+file.reference.google-api-services-youtube-v3-rev20200618-1.30.9.jar=../../FrameWorkBESA/google-api-services-youtube-v3-rev20200618-1.30.9.jar
+file.reference.google-auth-library-oauth2-http-0.22.0.jar=../../FrameWorkBESA/google-auth-library-oauth2-http-0.22.0.jar
+file.reference.google-cloud-storage-1.113.1.jar=../../FrameWorkBESA/google-cloud-storage-1.113.1.jar
+file.reference.google-http-client-1.37.0.jar=../../FrameWorkBESA/google-http-client-1.37.0.jar
+file.reference.google-http-client-jackson2-1.37.0.jar=../../FrameWorkBESA/google-http-client-jackson2-1.37.0.jar
+file.reference.grpc-context-1.22.1.jar=../../FrameWorkBESA/grpc-context-1.22.1.jar
+file.reference.guava-29.0-android.jar=../../FrameWorkBESA/guava-29.0-android.jar
+file.reference.guava-30.0-jre.jar=../../FrameWorkBESA/guava-30.0-jre.jar
+file.reference.httpclient-4.5.13.jar=../../FrameWorkBESA/httpclient-4.5.13.jar
+file.reference.httpcore-4.4.13.jar=../../FrameWorkBESA/httpcore-4.4.13.jar
+file.reference.j2objc-annotations-1.3.jar=../../FrameWorkBESA/j2objc-annotations-1.3.jar
 file.reference.jackson-annotations-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-annotations-2.12.0-rc1.jar
 file.reference.jackson-core-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-core-2.12.0-rc1.jar
 file.reference.jackson-databind-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-databind-2.12.0-rc1.jar
+file.reference.jsr305-3.0.2.jar=../../FrameWorkBESA/jsr305-3.0.2.jar
+file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=../../FrameWorkBESA/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
 file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
+file.reference.opencensus-api-0.24.0.jar=../../FrameWorkBESA/opencensus-api-0.24.0.jar
+file.reference.opencensus-contrib-http-util-0.24.0.jar=../../FrameWorkBESA/opencensus-contrib-http-util-0.24.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,10 +68,34 @@ javac.classpath=\
     ${reference.KernelBESA.jar}:\
     ${reference.LocalBESA.jar}:\
     ${reference.RationalBESA.jar}:\
-    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.checker-compat-qual-2.5.5.jar}:\
+    ${file.reference.checker-qual-3.5.0.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.error_prone_annotations-2.3.4.jar}:\
+    ${file.reference.failureaccess-1.0.1.jar}:\
+    ${file.reference.google-api-client-1.30.11.jar}:\
+    ${file.reference.google-api-client-java6-1.30.11.jar}:\
+    ${file.reference.google-api-services-youtube-v3-rev20200618-1.30.9.jar}:\
+    ${file.reference.google-http-client-1.37.0.jar}:\
+    ${file.reference.google-http-client-jackson2-1.37.0.jar}:\
+    ${file.reference.grpc-context-1.22.1.jar}:\
+    ${file.reference.guava-29.0-android.jar}:\
+    ${file.reference.guava-30.0-jre.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
+    ${file.reference.j2objc-annotations-1.3.jar}:\
+    ${file.reference.jackson-annotations-2.12.0-rc1.jar}:\
     ${file.reference.jackson-core-2.12.0-rc1.jar}:\
     ${file.reference.jackson-databind-2.12.0-rc1.jar}:\
-    ${file.reference.jackson-annotations-2.12.0-rc1.jar}
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.opencensus-api-0.24.0.jar}:\
+    ${file.reference.opencensus-contrib-http-util-0.24.0.jar}:\
+    ${file.reference.firebase-admin-7.0.1.jar}:\
+    ${file.reference.google-auth-library-oauth2-http-0.22.0.jar}:\
+    ${file.reference.google-cloud-storage-1.113.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
