DB Persistance done and tested

--- a/BESA/AgentePepper/ResPwAAgent/nbproject/project.properties
+++ b/BESA/AgentePepper/ResPwAAgent/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -58,9 +59,13 @@ file.reference.jackson-core-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-core-2.12
 file.reference.jackson-databind-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-databind-2.12.0-rc1.jar
 file.reference.jsr305-3.0.2.jar=../../FrameWorkBESA/jsr305-3.0.2.jar
 file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=../../FrameWorkBESA/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
-file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
+file.reference.ojdbc8.jar=../../FrameWorkBESA/ojdbc8.jar
 file.reference.opencensus-api-0.24.0.jar=../../FrameWorkBESA/opencensus-api-0.24.0.jar
 file.reference.opencensus-contrib-http-util-0.24.0.jar=../../FrameWorkBESA/opencensus-contrib-http-util-0.24.0.jar
+file.reference.oraclepki.jar=../../FrameWorkBESA/oraclepki.jar
+file.reference.osdt_cert.jar=../../FrameWorkBESA/osdt_cert.jar
+file.reference.osdt_core.jar=../../FrameWorkBESA/osdt_core.jar
+file.reference.ucp.jar=../../FrameWorkBESA/ucp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -90,12 +95,17 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.12.0-rc1.jar}:\
     ${file.reference.jsr305-3.0.2.jar}:\
     ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
-    ${file.reference.ojdbc7.jar}:\
     ${file.reference.opencensus-api-0.24.0.jar}:\
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.ucp.jar}:\
     ${file.reference.opencensus-contrib-http-util-0.24.0.jar}:\
     ${file.reference.firebase-admin-7.0.1.jar}:\
     ${file.reference.google-auth-library-oauth2-http-0.22.0.jar}:\
-    ${file.reference.google-cloud-storage-1.113.1.jar}
+    ${file.reference.google-cloud-storage-1.113.1.jar}:\
+    ${file.reference.oraclepki.jar}:\
+    ${file.reference.osdt_cert.jar}:\
+    ${file.reference.osdt_core.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,7 +113,8 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
