--- a/BESA/AgentePepper/ResPwAAgent/nbproject/project.properties
+++ b/BESA/AgentePepper/ResPwAAgent/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jar=${dist.dir}/ResPwAAgent.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.api-common-1.10.1.jar=../../FrameWorkBESA/api-common-1.10.1.jar
 file.reference.checker-compat-qual-2.5.5.jar=../../FrameWorkBESA/checker-compat-qual-2.5.5.jar
 file.reference.checker-qual-3.5.0.jar=../../FrameWorkBESA/checker-qual-3.5.0.jar
 file.reference.commons-codec-1.11.jar=../../FrameWorkBESA/commons-codec-1.11.jar
@@ -44,6 +45,7 @@ file.reference.firebase-admin-7.0.1.jar=../../FrameWorkBESA/firebase-admin-7.0.1
 file.reference.google-api-client-1.30.11.jar=../../FrameWorkBESA/google-api-client-1.30.11.jar
 file.reference.google-api-client-java6-1.30.11.jar=../../FrameWorkBESA/google-api-client-java6-1.30.11.jar
 file.reference.google-api-services-youtube-v3-rev20200618-1.30.9.jar=../../FrameWorkBESA/google-api-services-youtube-v3-rev20200618-1.30.9.jar
+file.reference.google-auth-library-credentials-0.22.0.jar=../../FrameWorkBESA/google-auth-library-credentials-0.22.0.jar
 file.reference.google-auth-library-oauth2-http-0.22.0.jar=../../FrameWorkBESA/google-auth-library-oauth2-http-0.22.0.jar
 file.reference.google-cloud-storage-1.113.1.jar=../../FrameWorkBESA/google-cloud-storage-1.113.1.jar
 file.reference.google-http-client-1.37.0.jar=../../FrameWorkBESA/google-http-client-1.37.0.jar
@@ -63,6 +65,7 @@ file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=..
 file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
 file.reference.opencensus-api-0.24.0.jar=../../FrameWorkBESA/opencensus-api-0.24.0.jar
 file.reference.opencensus-contrib-http-util-0.24.0.jar=../../FrameWorkBESA/opencensus-contrib-http-util-0.24.0.jar
+file.reference.slf4j-api-1.7.9.jar=../../FrameWorkBESA/slf4j-api-1.7.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -98,7 +101,10 @@ javac.classpath=\
     ${file.reference.firebase-admin-7.0.1.jar}:\
     ${file.reference.google-auth-library-oauth2-http-0.22.0.jar}:\
     ${file.reference.google-cloud-storage-1.113.1.jar}:\
-    ${file.reference.javax.persistence-api-2.2.jar}
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.slf4j-api-1.7.9.jar}:\
+    ${file.reference.google-auth-library-credentials-0.22.0.jar}:\
+    ${file.reference.api-common-1.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
