--- a/BESA/AgentePepper/ResPwAEntities/nbproject/project.properties
+++ b/BESA/AgentePepper/ResPwAEntities/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=RationalBESA
-application.vendor=fjroldan
+application.title=ResPwAEntities
+application.vendor=juans
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -19,33 +19,24 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/RationalBESA.jar
+dist.jar=${dist.dir}/ResPwAEntities.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20160212.jar=lib\\json-20160212.jar
+file.reference.javax.persistence-api-2.2.jar=C:\\Users\\juans\\Desktop\\Tesis\\BESA\\FrameWorkBESA\\javax.persistence-api-2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20160212.jar}:\
-    ${reference.LocalBESA.jar}:\
-    ${reference.KernelBESA.jar}
+    ${file.reference.javax.persistence-api-2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
-javac.modulepath=
-javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -53,8 +44,6 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -68,15 +57,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=rationalbesa.RationalBESA
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.KernelBESA=../KernelBESA
-project.LocalBESA=../LocalBESA
-reference.KernelBESA.jar=${project.KernelBESA}/dist/KernelBESA.jar
-reference.LocalBESA.jar=${project.LocalBESA}/dist/LocalBESA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -84,13 +69,9 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
