--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /BESA/AgentePepper/ResPwAAgent/nbproject/private/
 /BESA/AgentePepper/ResPwAAgent/build/
 /BESA/AgentePepper/ResPwAAgent/dist/
+/BESA/AgentePepper/ResPwAEntities/build/
+/BESA/AgentePepper/ResPwAEntities/dist/
