--- a/BESA/AgentePepper/moduloCuidador/nbproject/project.properties
+++ b/BESA/AgentePepper/moduloCuidador/nbproject/project.properties
@@ -34,7 +34,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.ResPwAEntities.jar}:\
-    ${file.reference.javax.persistence-api-2.2.jar}
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=modulocuidador.ModuloCuidador
+main.class=modulocuidador.CuidadorStartPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
