Tasks and Goals updated

--- a/BESA/AgentePepper/ResPwAEntities/nbproject/private/private.properties
+++ b/BESA/AgentePepper/ResPwAEntities/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.javax.persistence-api-2.2.jar=/Users/mafegarces/Documents/SASE-PwD/BESA/FrameWorkBESA/javax.persistence-api-2.2.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\juans\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/Users/mafegarces/Library/Application Support/NetBeans/8.2rc/build.properties
