--- a/BESA/AgentePepper/moduloCuidador/nbproject/project.properties
+++ b/BESA/AgentePepper/moduloCuidador/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javax.persistence-api-2.2.jar=../../FrameWorkBESA/javax.persistence-api-2.2.jar
+file.reference.ojdbc8.jar=../../FrameWorkBESA/ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.ResPwAEntities.jar}:\
-    ${file.reference.javax.persistence-api-2.2.jar}
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=modulocuidador.ModuloCuidador
+main.class=modulocuidador.CuidadorStartPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
