--- a/BESA/AgentePepper/ResPwAEntities/nbproject/project.properties
+++ b/BESA/AgentePepper/ResPwAEntities/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javax.persistence-api-2.2.jar=C:\\Users\\juans\\Desktop\\Tesis\\BESA\\FrameWorkBESA\\javax.persistence-api-2.2.jar
+file.reference.ojdbc8.jar=../../FrameWorkBESA/ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.persistence-api-2.2.jar}
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
