--- a/BESA/AgenteResPwA/ResPwAAgent/nbproject/project.properties
+++ b/BESA/AgenteResPwA/ResPwAAgent/nbproject/project.properties
@@ -101,11 +101,11 @@ javac.classpath=\
     ${file.reference.firebase-admin-7.0.1.jar}:\
     ${file.reference.google-auth-library-oauth2-http-0.22.0.jar}:\
     ${file.reference.google-cloud-storage-1.113.1.jar}:\
-    ${file.reference.javax.persistence-api-2.2.jar}:\
     ${file.reference.slf4j-api-1.7.9.jar}:\
     ${file.reference.google-auth-library-credentials-0.22.0.jar}:\
     ${file.reference.api-common-1.10.1.jar}:\
-    ${reference.ResPwAEntities.jar}
+    ${reference.ResPwAEntities.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
