--- a/BESA/AgenteResPwA/ResPwAEntities/nbproject/project.properties
+++ b/BESA/AgenteResPwA/ResPwAEntities/nbproject/project.properties
@@ -40,7 +40,9 @@ file.reference.ojdbc8.jar=../../FrameWorkBESA/ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-<<<<<<< HEAD:BESA/AgentePepper/ResPwAEntities/nbproject/project.properties
+    <<<<<<< HEAD:\
+    BESA/AgentePepper/ResPwAEntities/nbproject/project.properties:\
+    ${file.reference.javax.persistence-api-2.2.jar}
 =======
     ${libs.eclipselink.classpath}:\
     ${file.reference.j2objc-annotations-1.3.jar}:\
