--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@
 /BESA/AgenteResPwA/ResPwAEntities/dist/
 /BESA/AgenteResPwA/ResPwAAgent/dist/
 /BESA/FrameWorkBESA/RationalBESA/nbproject/private/
+/BESA/FrameWorkBESA/BDIBESA/build/
+/BESA/AgenteResPwA/ResPwAAgent/build/
+/BESA/FrameWorkBESA/RationalBESA/build/
+/BESA/FrameWorkBESA/BDIBESA/dist/
+/BESA/FrameWorkBESA/RationalBESA/dist/
+/BESA/AgenteResPwA/ResPwAEntities/build/
