--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /BESA/AgenteResPwA/ResPwAEntities/build/
 /BESA/AgenteResPwA/ResPwAEntities/build/
 /BESA/AgenteResPwA/ResPwAAgent/build/
+/BESA/FrameWorkBESA/RationalBESA/dist/
+/BESA/FrameWorkBESA/BDIBESA/dist/
