--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /BESA/AgenteResPwA/ResPwAAgent/build/
 /BESA/FrameWorkBESA/RationalBESA/dist/
 /BESA/FrameWorkBESA/BDIBESA/dist/
+/Python/PythonProject/venv/
+/Python/PythonProject/venv2/
