--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /BESA/AgenteResPwA/ResPwAEntities/dist/
 /BESA/AgenteResPwA/ResPwAAgent/dist/
 /BESA/FrameWorkBESA/RationalBESA/nbproject/private/
+/BESA/FrameWorkBESA/BDIBESA/dist/
+/BESA/FrameWorkBESA/RationalBESA/dist/
