--- a/BESA/FrameWorkBESA/RationalBESA/nbproject/private/private.properties
+++ b/BESA/FrameWorkBESA/RationalBESA/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\juans\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\jsleon\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
