--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /Python/PythonProject/venv2/
 /Python/PythonProject/venv2/Environment
 /BESA/FrameWorkBESA/RationalBESA/build/
+/scriptsDocker/oracledb/
