--- a/BESA/AgenteResPwA/ResPwAEntities/nbproject/private/private.properties
+++ b/BESA/AgenteResPwA/ResPwAEntities/nbproject/private/private.properties
@@ -1,18 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-<<<<<<< HEAD
-user.properties.file=/Users/mafegarces/Library/Application Support/NetBeans/8.2rc/build.properties
-=======
-<<<<<<< HEAD
-user.properties.file=/Users/mafegarces/Library/Application Support/NetBeans/8.2rc/build.properties
-=======
-<<<<<<< HEAD
-user.properties.file=C:\\Users\\maria.f.garces.cala\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
-=======
+jlink.strip=false
 user.properties.file=C:\\Users\\juans\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
->>>>>>> origin/develop
->>>>>>> develop
->>>>>>> f1e414d2dfd1c7c92f62a939fb472aa65ebe382b
