--- a/BESA/AgenteResPwA/ResPwAEntities/nbproject/project.properties
+++ b/BESA/AgenteResPwA/ResPwAEntities/nbproject/project.properties
@@ -32,37 +32,97 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ResPwAEntities.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+dist.jlink.dir=${dist.dir}/jlink
+dist.jlink.output=${dist.jlink.dir}/ResPwAEntities
 endorsed.classpath=
 excludes=
-<<<<<<< HEAD:BESA/AgentePepper/ResPwAEntities/nbproject/project.properties
-file.reference.javax.persistence-api-2.2.jar=C:\\Users\\juans\\Desktop\\Tesis\\BESA\\FrameWorkBESA\\javax.persistence-api-2.2.jar
-=======
+file.reference.api-common-1.10.1.jar=../../FrameWorkBESA/api-common-1.10.1.jar
+file.reference.checker-compat-qual-2.5.5.jar=../../FrameWorkBESA/checker-compat-qual-2.5.5.jar
+file.reference.checker-qual-3.5.0.jar=../../FrameWorkBESA/checker-qual-3.5.0.jar
+file.reference.commons-codec-1.11.jar=../../FrameWorkBESA/commons-codec-1.11.jar
+file.reference.commons-logging-1.2.jar=../../FrameWorkBESA/commons-logging-1.2.jar
+file.reference.eclipselink-3.0.0-M1.jar=../../FrameWorkBESA/eclipselink-3.0.0-M1.jar
+file.reference.error_prone_annotations-2.3.4.jar=../../FrameWorkBESA/error_prone_annotations-2.3.4.jar
+file.reference.failureaccess-1.0.1.jar=../../FrameWorkBESA/failureaccess-1.0.1.jar
+file.reference.firebase-admin-7.0.1.jar=../../FrameWorkBESA/firebase-admin-7.0.1.jar
+file.reference.google-api-client-1.30.11.jar=../../FrameWorkBESA/google-api-client-1.30.11.jar
+file.reference.google-api-client-java6-1.30.11.jar=../../FrameWorkBESA/google-api-client-java6-1.30.11.jar
+file.reference.google-api-services-youtube-v3-rev20200618-1.30.9.jar=../../FrameWorkBESA/google-api-services-youtube-v3-rev20200618-1.30.9.jar
+file.reference.google-auth-library-credentials-0.22.0.jar=../../FrameWorkBESA/google-auth-library-credentials-0.22.0.jar
+file.reference.google-auth-library-oauth2-http-0.22.0.jar=../../FrameWorkBESA/google-auth-library-oauth2-http-0.22.0.jar
+file.reference.google-cloud-storage-1.113.1.jar=../../FrameWorkBESA/google-cloud-storage-1.113.1.jar
+file.reference.google-http-client-1.37.0.jar=../../FrameWorkBESA/google-http-client-1.37.0.jar
+file.reference.google-http-client-jackson2-1.37.0.jar=../../FrameWorkBESA/google-http-client-jackson2-1.37.0.jar
+file.reference.grpc-context-1.22.1.jar=../../FrameWorkBESA/grpc-context-1.22.1.jar
+file.reference.guava-29.0-android.jar=../../FrameWorkBESA/guava-29.0-android.jar
+file.reference.guava-30.0-jre.jar=../../FrameWorkBESA/guava-30.0-jre.jar
+file.reference.httpclient-4.5.13.jar=../../FrameWorkBESA/httpclient-4.5.13.jar
+file.reference.httpcore-4.4.13.jar=../../FrameWorkBESA/httpcore-4.4.13.jar
 file.reference.j2objc-annotations-1.3.jar=../../FrameWorkBESA/j2objc-annotations-1.3.jar
+file.reference.jackson-annotations-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-annotations-2.12.0-rc1.jar
+file.reference.jackson-core-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-core-2.12.0-rc1.jar
+file.reference.jackson-databind-2.12.0-rc1.jar=../../FrameWorkBESA/jackson-databind-2.12.0-rc1.jar
 file.reference.javax.persistence-api-2.2.jar=../../FrameWorkBESA/javax.persistence-api-2.2.jar
->>>>>>> 35d1b36907a5f8de33749267cebed67a662342e9:BESA/AgenteResPwA/ResPwAEntities/nbproject/project.properties
+file.reference.jsr305-3.0.2.jar=../../FrameWorkBESA/jsr305-3.0.2.jar
+file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=../../FrameWorkBESA/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
 file.reference.ojdbc7.jar=../../FrameWorkBESA/ojdbc7.jar
 file.reference.ojdbc8.jar=../../FrameWorkBESA/ojdbc8.jar
+file.reference.opencensus-api-0.24.0.jar=../../FrameWorkBESA/opencensus-api-0.24.0.jar
+file.reference.opencensus-contrib-http-util-0.24.0.jar=../../FrameWorkBESA/opencensus-contrib-http-util-0.24.0.jar
+file.reference.oraclepki.jar=../../FrameWorkBESA/oraclepki.jar
+file.reference.osdt_cert.jar=../../FrameWorkBESA/osdt_cert.jar
+file.reference.osdt_core.jar=../../FrameWorkBESA/osdt_core.jar
+file.reference.slf4j-api-1.7.9.jar=../../FrameWorkBESA/slf4j-api-1.7.9.jar
+file.reference.ucp.jar=../../FrameWorkBESA/ucp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.persistence-api-2.2.jar}:\
-    ${file.reference.ojdbc7.jar}:\
-    ${libs.eclipselink.classpath}
-=======
-    ${libs.eclipselink.classpath}:\
+    ${file.reference.api-common-1.10.1.jar}:\
+    ${file.reference.checker-compat-qual-2.5.5.jar}:\
+    ${file.reference.checker-qual-3.5.0.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.eclipselink-3.0.0-M1.jar}:\
+    ${file.reference.error_prone_annotations-2.3.4.jar}:\
+    ${file.reference.failureaccess-1.0.1.jar}:\
+    ${file.reference.firebase-admin-7.0.1.jar}:\
+    ${file.reference.google-api-client-1.30.11.jar}:\
+    ${file.reference.google-api-client-java6-1.30.11.jar}:\
+    ${file.reference.google-api-services-youtube-v3-rev20200618-1.30.9.jar}:\
+    ${file.reference.google-auth-library-credentials-0.22.0.jar}:\
+    ${file.reference.google-auth-library-oauth2-http-0.22.0.jar}:\
+    ${file.reference.google-cloud-storage-1.113.1.jar}:\
+    ${file.reference.google-http-client-1.37.0.jar}:\
+    ${file.reference.google-http-client-jackson2-1.37.0.jar}:\
+    ${file.reference.grpc-context-1.22.1.jar}:\
+    ${file.reference.guava-29.0-android.jar}:\
+    ${file.reference.guava-30.0-jre.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
     ${file.reference.j2objc-annotations-1.3.jar}:\
->>>>>>> 35d1b36907a5f8de33749267cebed67a662342e9:BESA/AgenteResPwA/ResPwAEntities/nbproject/project.properties
+    ${file.reference.jackson-annotations-2.12.0-rc1.jar}:\
+    ${file.reference.jackson-core-2.12.0-rc1.jar}:\
+    ${file.reference.jackson-databind-2.12.0-rc1.jar}:\
     ${file.reference.javax.persistence-api-2.2.jar}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.opencensus-api-0.24.0.jar}:\
+    ${file.reference.opencensus-contrib-http-util-0.24.0.jar}:\
+    ${file.reference.oraclepki.jar}:\
+    ${file.reference.osdt_cert.jar}:\
+    ${file.reference.osdt_core.jar}:\
+    ${file.reference.slf4j-api-1.7.9.jar}:\
+    ${file.reference.ucp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
+javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -75,6 +135,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -83,6 +144,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+# The jlink additional root modules to resolve
+jlink.additionalmodules=
+# The jlink additional command line parameters
+jlink.additionalparam=
+jlink.launcher=true
+jlink.launcher.name=ResPwAEntities
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
