--- a/BESA/AgenteResPwA/ResPwAAgent/nbproject/project.properties
+++ b/BESA/AgenteResPwA/ResPwAAgent/nbproject/project.properties
@@ -132,6 +132,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -140,11 +141,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=ResPwAAgent
 main.class=Init.InitRESPwA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.BDIBESA=../../FrameWorkBESA/BDIBESA
 project.KernelBESA=../../FrameWorkBESA/KernelBESA
 project.LocalBESA=../../FrameWorkBESA/LocalBESA
