--- a/BESA/FrameWorkBESA/KernelBESA/nbproject/project.properties
+++ b/BESA/FrameWorkBESA/KernelBESA/nbproject/project.properties
@@ -37,12 +37,13 @@ javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -53,6 +54,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -61,11 +63,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=KernelBESA
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
