--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@
 /BESA/AgenteResPwA/ResPwAAgent/nbproject/private/private.xml
 /BESA/AgenteResPwA/ResPwAEntities/nbproject/private/private.properties
 *.properties
-*.properties
 BESA/AgenteResPwA/ResPwAAgent/nbproject/private/private.properties
 *.properties
+*/*.class
+./Python/PythonProject/Enviroment/
+./Python/PythonProject/venv/
