--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 *.properties
 BESA/AgenteResPwA/ResPwAAgent/nbproject/private/private.properties
 *.properties
+BESA/AgenteResPwA/ResPwAAgent/nbproject/private/private.xml
