--- a/BESA/AgenteResPwA/ResPwAAgent/nbproject/project.properties
+++ b/BESA/AgenteResPwA/ResPwAAgent/nbproject/project.properties
@@ -147,7 +147,7 @@ main.class=Init.InitRESPwA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 project.BDIBESA=../../FrameWorkBESA/BDIBESA
 project.KernelBESA=../../FrameWorkBESA/KernelBESA
 project.LocalBESA=../../FrameWorkBESA/LocalBESA
