--- a/BESA/FrameWorkBESA/RationalBESA/nbproject/private/private.properties
+++ b/BESA/FrameWorkBESA/RationalBESA/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/juaosorio/Library/Application Support/NetBeans/12.3/build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\juans\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
